@@ -17,18 +17,14 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
 
-import com.amazonaws.AmazonServiceException;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
-import com.amazonaws.services.s3.model.CopyObjectRequest;
-import com.amazonaws.services.s3.model.DeleteObjectTaggingRequest;
-import com.amazonaws.services.s3.model.GetBucketPolicyStatusRequest;
-import com.amazonaws.services.s3.model.GetObjectTaggingRequest;
-import com.amazonaws.services.s3.model.MetadataDirective;
-import com.amazonaws.services.s3.model.ObjectMetadata;
-import com.amazonaws.services.s3.model.ObjectTagging;
-import com.amazonaws.services.s3.model.SetObjectTaggingRequest;
+import software.amazon.awssdk.awscore.exception.AwsServiceException;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.model.BucketCannedACL;
+import software.amazon.awssdk.services.s3.model.MetadataDirective;
+import software.amazon.awssdk.services.s3.model.Tagging;
 
 import org.example.Data.MainData;
 import org.junit.jupiter.api.Tag;
@@ -37,29 +33,25 @@ import org.junit.jupiter.api.Test;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
 
-public class Policy extends TestBase
-{
+public class Policy extends TestBase {
 	@org.junit.jupiter.api.BeforeAll
-	public static void beforeAll()
-	{
-		System.out.println("Policy SDK V2 Start");
+	public static void beforeAll() {
+		System.out.println("Policy Start");
 	}
 
 	@org.junit.jupiter.api.AfterAll
-	public static void afterAll()
-	{
-		System.out.println("Policy SDK V2 End");
+	public static void afterAll() {
+		System.out.println("Policy End");
 	}
 
 	@Test
 	@Tag("Check")
 	// 버킷에 정책 설정이 올바르게 적용되는지 확인
-	public void test_bucket_policy()
-	{
+	public void testBucketPolicy() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "asdf";
-		client.putObject(bucketName, key, key);
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(key));
 
 		var resource1 = "arn:aws:s3:::" + bucketName;
 		var resource2 = "arn:aws:s3:::" + bucketName + "/*";
@@ -83,25 +75,24 @@ public class Policy extends TestBase
 		statements.add(statement);
 		policyDocument.add(MainData.PolicyStatement, statements);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
 		var altClient = getAltClient();
-		var response = altClient.listObjects(bucketName);
-		assertEquals(1, response.getObjectSummaries().size());
+		var response = altClient.listObjects(l -> l.bucket(bucketName));
+		assertEquals(1, response.contents().size());
 
-		var getResponse = client.getBucketPolicy(bucketName);
-		assertEquals(policyDocument.toString(), getResponse.getPolicyText());
+		var getResponse = client.getBucketPolicy(g -> g.bucket(bucketName));
+		assertEquals(policyDocument.toString(), getResponse.policy());
 	}
 
 	@Test
 	@Tag("Check")
 	// 버킷에 정책 설정이 올바르게 적용되는지 확인(ListObjectsV2)
-	public void test_bucket_v2_policy()
-	{
+	public void testBucketV2Policy() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "asdf";
-		client.putObject(bucketName, key, key);
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(key));
 
 		var resource1 = "arn:aws:s3:::" + bucketName;
 		var resource2 = "arn:aws:s3:::" + bucketName + "/*";
@@ -124,25 +115,24 @@ public class Policy extends TestBase
 		statements.add(statement);
 		policyDocument.add(MainData.PolicyStatement, statements);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
 		var altClient = getAltClient();
-		var response = altClient.listObjectsV2(bucketName);
-		assertEquals(1, response.getObjectSummaries().size());
+		var response = altClient.listObjectsV2(l -> l.bucket(bucketName));
+		assertEquals(1, response.contents().size());
 
-		var getResponse = client.getBucketPolicy(bucketName);
-		assertEquals(policyDocument.toString(), getResponse.getPolicyText());
+		var getResponse = client.getBucketPolicy(g -> g.bucket(bucketName));
+		assertEquals(policyDocument.toString(), getResponse.policy());
 	}
 
 	@Test
 	@Tag("Priority")
 	// 버킷에 정책과 acl설정을 할 경우 정책 설정이 우선시됨을 확인
-	public void test_bucket_policy_acl()
-	{
+	public void testBucketPolicyAcl() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "asdf";
-		client.putObject(bucketName, key, key);
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(key));
 
 		var resource1 = "arn:aws:s3:::" + bucketName;
 		var resource2 = "arn:aws:s3:::" + bucketName + "/*";
@@ -156,7 +146,7 @@ public class Policy extends TestBase
 		statement.addProperty(MainData.PolicyEffect, MainData.PolicyEffectDeny);
 
 		var principal = new JsonObject();
-		principal.addProperty( "AWS", "*");
+		principal.addProperty("AWS", "*");
 		statement.add(MainData.PolicyPrincipal, principal);
 
 		statement.addProperty(MainData.PolicyAction, "s3:ListBucket");
@@ -169,34 +159,32 @@ public class Policy extends TestBase
 		statements.add(statement);
 		policyDocument.add(MainData.PolicyStatement, statements);
 
-		client.setBucketAcl(bucketName, CannedAccessControlList.AuthenticatedRead);
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketAcl(p -> p.bucket(bucketName).acl(BucketCannedACL.AUTHENTICATED_READ));
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
 		var altClient = getAltClient();
-		var e = assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, key));
-		var statusCode = e.getStatusCode();
-		var errorCode = e.getErrorCode();
+		var e = assertThrows(AwsServiceException.class, () -> altClient.getObject(g -> g.bucket(bucketName).key(key)));
+		var statusCode = e.statusCode();
+		var errorCode = e.awsErrorDetails().errorCode();
 		assertEquals(403, statusCode);
 		assertEquals(MainData.AccessDenied, errorCode);
 
-		client.deleteBucketPolicy(bucketName);
-		client.setBucketAcl(bucketName, CannedAccessControlList.PublicRead);
+		client.deleteBucketPolicy(d -> d.bucket(bucketName));
+		client.putBucketAcl(p -> p.bucket(bucketName).acl(BucketCannedACL.PUBLIC_READ));
 	}
 
 	@Test
 	@Tag("Priority")
 	// 버킷에 정책과 acl설정을 할 경우 정책 설정이 우선시됨을 확인(ListObjectsV2)
-	public void test_bucket_v2_policy_acl()
-	{
+	public void testBucketV2PolicyAcl() {
 
 		var bucketName = getNewBucket();
 		var client = getClient();
 		var key = "asdf";
-		client.putObject(bucketName, key, key);
+		client.putObject(p -> p.bucket(bucketName).key(key), RequestBody.fromString(key));
 
 		var resource1 = "arn:aws:s3:::" + bucketName;
 		var resource2 = "arn:aws:s3:::" + bucketName + "/*";
-
 
 		var policyDocument = new JsonObject();
 		policyDocument.addProperty(MainData.PolicyVersion, MainData.PolicyVersionDate);
@@ -207,7 +195,7 @@ public class Policy extends TestBase
 		statement.addProperty(MainData.PolicyEffect, MainData.PolicyEffectDeny);
 
 		var principal = new JsonObject();
-		principal.addProperty( "AWS", "*");
+		principal.addProperty("AWS", "*");
 		statement.add(MainData.PolicyPrincipal, principal);
 
 		statement.addProperty(MainData.PolicyAction, "s3:ListBucket");
@@ -220,25 +208,24 @@ public class Policy extends TestBase
 		statements.add(statement);
 		policyDocument.add(MainData.PolicyStatement, statements);
 
-		client.setBucketAcl(bucketName, CannedAccessControlList.AuthenticatedRead);
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketAcl(p -> p.bucket(bucketName).acl(BucketCannedACL.AUTHENTICATED_READ));
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
 		var altClient = getAltClient();
-		var e = assertThrows(AmazonServiceException.class, () -> altClient.listObjectsV2(bucketName));
-		var statusCode = e.getStatusCode();
-		var errorCode = e.getErrorCode();
+		var e = assertThrows(AwsServiceException.class, () -> altClient.listObjectsV2(l -> l.bucket(bucketName)));
+		var statusCode = e.statusCode();
+		var errorCode = e.awsErrorDetails().errorCode();
 		assertEquals(403, statusCode);
 		assertEquals(MainData.AccessDenied, errorCode);
 
-		client.deleteBucketPolicy(bucketName);
-		client.setBucketAcl(bucketName, CannedAccessControlList.PublicRead);
+		client.deleteBucketPolicy(d -> d.bucket(bucketName));
+		client.putBucketAcl(p -> p.bucket(bucketName).acl(BucketCannedACL.PUBLIC_READ));
 	}
 
 	@Test
 	@Tag("Tagging")
 	// 정책설정으로 오브젝트의 태그목록 읽기를 public-read로 설정했을때 올바르게 동작하는지 확인
-	public void test_get_tags_acl_public()
-	{
+	public void testGetTagsAclPublic() {
 		var key = "acl";
 		var bucketName = createKeyWithRandomContent(key, 0, null, null);
 		var client = getClient();
@@ -246,22 +233,21 @@ public class Policy extends TestBase
 		var resource = makeArnResource(String.format("%s/%s", bucketName, key));
 		var policyDocument = makeJsonPolicy("s3:GetObjectTagging", resource, null, null);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
-		var inputTagSet = new ObjectTagging(createSimpleTagSet(10));
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, key, inputTagSet));
+		var inputTagSet = Tagging.builder().tagSet(createSimpleTagSet(10)).build();
+		client.putObjectTagging(p -> p.bucket(bucketName).key(key).tagging(inputTagSet));
 
 		var altClient = getAltClient();
 
-		var getResponse = altClient.getObjectTagging(new GetObjectTaggingRequest(bucketName, key));
-		tagCompare(inputTagSet.getTagSet(), getResponse.getTagSet());
+		var getResponse = altClient.getObjectTagging(g -> g.bucket(bucketName).key(key));
+		tagCompare(inputTagSet.tagSet(), getResponse.tagSet());
 	}
 
 	@Test
 	@Tag("Tagging")
 	// 정책설정으로 오브젝트의 태그 입력을 public-read로 설정했을때 올바르게 동작하는지 확인
-	public void test_put_tags_acl_public()
-	{
+	public void testPutTagsAclPublic() {
 		var key = "acl";
 		var bucketName = createKeyWithRandomContent(key, 0, null, null);
 		var client = getClient();
@@ -269,21 +255,20 @@ public class Policy extends TestBase
 		var resource = makeArnResource(String.format("%s/%s", bucketName, key));
 		var policyDocument = makeJsonPolicy("s3:PutObjectTagging", resource, null, null);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
-		var inputTagSet = new ObjectTagging(createSimpleTagSet(10));
+		var inputTagSet = Tagging.builder().tagSet(createSimpleTagSet(10)).build();
 		var altClient = getAltClient();
-		altClient.setObjectTagging(new SetObjectTaggingRequest(bucketName, key, inputTagSet));
+		altClient.putObjectTagging(p -> p.bucket(bucketName).key(key).tagging(inputTagSet));
 
-		var getResponse = client.getObjectTagging(new GetObjectTaggingRequest(bucketName, key));
-		tagCompare(inputTagSet.getTagSet(), getResponse.getTagSet());
+		var getResponse = client.getObjectTagging(g -> g.bucket(bucketName).key(key));
+		tagCompare(inputTagSet.tagSet(), getResponse.tagSet());
 	}
 
 	@Test
 	@Tag("Tagging")
 	// 정책설정으로 오브젝트의 태그 삭제를 public-read로 설정했을때 올바르게 동작하는지 확인
-	public void test_delete_tags_obj_public()
-	{
+	public void testDeleteTagsObjPublic() {
 		var key = "acl";
 		var bucketName = createKeyWithRandomContent(key, 0, null, null);
 		var client = getClient();
@@ -291,27 +276,28 @@ public class Policy extends TestBase
 		var resource = makeArnResource(String.format("%s/%s", bucketName, key));
 		var policyDocument = makeJsonPolicy("s3:DeleteObjectTagging", resource, null, null);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
-		var inputTagSet = new ObjectTagging(createSimpleTagSet(10));
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, key, inputTagSet));
+		var inputTagSet = Tagging.builder().tagSet(createSimpleTagSet(10)).build();
+		client.putObjectTagging(p -> p.bucket(bucketName).key(key).tagging(inputTagSet));
 
 		var altClient = getAltClient();
-		altClient.deleteObjectTagging(new DeleteObjectTaggingRequest(bucketName, key));
+		altClient.deleteObjectTagging(d -> d.bucket(bucketName).key(key));
 
-		var getResponse = client.getObjectTagging(new GetObjectTaggingRequest(bucketName, key));
-		assertEquals(0, getResponse.getTagSet().size());
+		var getResponse = client.getObjectTagging(g -> g.bucket(bucketName).key(key));
+		assertEquals(0, getResponse.tagSet().size());
 	}
 
+	@SuppressWarnings("resource")
 	@Test
 	@Tag("TagOptions")
-	// [오브젝트의 태그에 'security'키 이름이 존재하며 키값이 public 일때만 모든유저에게 GetObject허용] 조건부 정책설정시 올바르게 동작하는지 확인
-	public void test_bucket_policy_get_obj_existing_tag()
-	{
+	// [오브젝트의 태그에 'security'키 이름이 존재하며 키값이 public 일때만 모든유저에게 GetObject허용] 조건부 정책설정시
+	// 올바르게 동작하는지 확인
+	public void testBucketPolicyGetObjExistingTag() {
 		var publicTag = "publicTag";
 		var privateTag = "privateTag";
 		var invalidTag = "invalidTag";
-		var bucketName = createObjects(new ArrayList<>(Arrays.asList(new String[] { publicTag, privateTag, invalidTag })));
+		var bucketName = createObjects(List.of(publicTag, privateTag, invalidTag));
 		var client = getClient();
 
 		var conditional = new JsonObject();
@@ -322,47 +308,42 @@ public class Policy extends TestBase
 		var resource = makeArnResource(String.format("%s/%s", bucketName, "*"));
 		var policyDocument = makeJsonPolicy("s3:GetObject", resource, null, tagConditional);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
-		var tags = new ArrayList<com.amazonaws.services.s3.model.Tag>();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security", "public"));
-		tags.add(new com.amazonaws.services.s3.model.Tag("foo", "bar"));
-		var inputTagSet = new ObjectTagging(tags);
+		client.putObjectTagging(p -> p.bucket(bucketName).key(publicTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("public").build(),
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("foo").value("bar").build())));
 
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, publicTag, inputTagSet));
+		client.putObjectTagging(p -> p.bucket(bucketName).key(privateTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("private").build())));
 
-		tags.clear();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security", "private"));
-		inputTagSet.setTagSet(tags);
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, privateTag, inputTagSet));
-
-		tags.clear();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security1", "public"));
-		inputTagSet.setTagSet(tags);
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, invalidTag, inputTagSet));
+		client.putObjectTagging(p -> p.bucket(bucketName).key(invalidTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security1").value("public").build())));
 
 		var altClient = getAltClient();
-		var getResponse = altClient.getObject(bucketName, publicTag);
+		var getResponse = altClient.getObject(g -> g.bucket(bucketName).key(publicTag));
 		assertNotNull(getResponse);
 
-		var e = assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, privateTag));
-		var statusCode = e.getStatusCode();
+		var e = assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(g -> g.bucket(bucketName).key(privateTag)));
+		var statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 
-		e = assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, invalidTag));
-		statusCode = e.getStatusCode();
+		e = assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(g -> g.bucket(bucketName).key(invalidTag)));
+		statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 	}
 
 	@Test
 	@Tag("TagOptions")
-	// [오브젝트의 태그에 'security'키 이름이 존재하며 키값이 public 일때만 모든유저에게 GetObjectTagging허용] 조건부 정책설정시 올바르게 동작하는지 확인
-	public void test_bucket_policy_get_obj_tagging_existing_tag()
-	{
+	// [오브젝트의 태그에 'security'키 이름이 존재하며 키값이 public 일때만 모든유저에게 GetObjectTagging허용] 조건부
+	// 정책설정시 올바르게 동작하는지 확인
+	public void testBucketPolicyGetObjTaggingExistingTag() {
 		var publicTag = "publicTag";
 		var privateTag = "privateTag";
 		var invalidTag = "invalidTag";
-		var bucketName = createObjects(new ArrayList<>(Arrays.asList(new String[] { publicTag, privateTag, invalidTag })));
+		var bucketName = createObjects(List.of(publicTag, privateTag, invalidTag));
 		var client = getClient();
 
 		var conditional = new JsonObject();
@@ -373,51 +354,48 @@ public class Policy extends TestBase
 		var resource = makeArnResource(String.format("%s/%s", bucketName, "*"));
 		var policyDocument = makeJsonPolicy("s3:GetObjectTagging", resource, null, tagConditional);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
-		var tags = new ArrayList<com.amazonaws.services.s3.model.Tag>();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security", "public"));
-		tags.add(new com.amazonaws.services.s3.model.Tag("foo", "bar"));
-		var inputTagSet = new ObjectTagging(tags);
+		client.putObjectTagging(p -> p.bucket(bucketName).key(publicTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("public").build(),
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("foo").value("bar").build())));
 
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, publicTag, inputTagSet));
+		client.putObjectTagging(p -> p.bucket(bucketName).key(privateTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("private").build())));
 
-		tags.clear();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security", "private"));
-		inputTagSet.setTagSet(tags);
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, privateTag, inputTagSet));
-
-		tags.clear();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security1", "public"));
-		inputTagSet.setTagSet(tags);
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, invalidTag, inputTagSet));
+		client.putObjectTagging(p -> p.bucket(bucketName).key(invalidTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security1").value("public").build())));
 
 		var altClient = getAltClient();
-		var getResponse = altClient.getObjectTagging(new GetObjectTaggingRequest(bucketName, publicTag));
+		var getResponse = altClient.getObjectTagging(g -> g.bucket(bucketName).key(publicTag));
 		assertNotNull(getResponse);
 
-		var e = assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, publicTag));
-		var statusCode = e.getStatusCode();
+		var e = assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(g -> g.bucket(bucketName).key(publicTag)));
+		var statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 
-		e = assertThrows(AmazonServiceException.class, () -> altClient.getObjectTagging(new GetObjectTaggingRequest(bucketName, privateTag)));
-		statusCode = e.getStatusCode();
+		e = assertThrows(AwsServiceException.class,
+				() -> altClient.getObjectTagging(g -> g.bucket(bucketName).key(privateTag)));
+		statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 
-		e = assertThrows(AmazonServiceException.class, () -> altClient.getObjectTagging(new GetObjectTaggingRequest(bucketName, invalidTag)));
-		statusCode = e.getStatusCode();
+		e = assertThrows(AwsServiceException.class,
+				() -> altClient.getObjectTagging(g -> g.bucket(bucketName).key(invalidTag)));
+		statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 	}
 
 	@Test
 	@Tag("TagOptions")
-	// [오브젝트의 태그에 'security'키 이름이 존재하며 키값이 public 일때만 모든유저에게 PutObjectTagging허용] 조건부 정책설정시 올바르게 동작하는지 확인
-	public void test_bucket_policy_put_obj_tagging_existing_tag()
-	{
+	// [오브젝트의 태그에 'security'키 이름이 존재하며 키값이 public 일때만 모든유저에게 PutObjectTagging허용] 조건부
+	// 정책설정시 올바르게 동작하는지 확인
+	public void testBucketPolicyPutObjTaggingExistingTag() {
 		var publicTag = "publicTag";
 		var privateTag = "privateTag";
 		var invalidTag = "invalidTag";
-		var bucketName = createObjects(new ArrayList<>(Arrays.asList(new String[] { publicTag, privateTag, invalidTag })));
+		var bucketName = createObjects(
+				List.of(publicTag, privateTag, invalidTag));
 		var client = getClient();
 
 		var conditional = new JsonObject();
@@ -428,67 +406,65 @@ public class Policy extends TestBase
 		var resource = makeArnResource(String.format("%s/%s", bucketName, "*"));
 		var policyDocument = makeJsonPolicy("s3:PutObjectTagging", resource, null, tagConditional);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
-		var tags = new ArrayList<com.amazonaws.services.s3.model.Tag>();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security", "public"));
-		tags.add(new com.amazonaws.services.s3.model.Tag("foo", "bar"));
-		var inputTagSet = new ObjectTagging(tags);
+		client.putObjectTagging(p -> p.bucket(bucketName).key(publicTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("public").build(),
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("foo").value("bar").build())));
 
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, publicTag, inputTagSet));
+		client.putObjectTagging(p -> p.bucket(bucketName).key(privateTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("private").build())));
 
-		tags.clear();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security", "private"));
-		inputTagSet.setTagSet(tags);
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, privateTag, inputTagSet));
+		client.putObjectTagging(p -> p.bucket(bucketName).key(invalidTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security1").value("public").build())));
 
-		tags.clear();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security1", "public"));
-		inputTagSet.setTagSet(tags);
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, invalidTag, inputTagSet));
-
-		var testTags = new ArrayList<com.amazonaws.services.s3.model.Tag>();
-		testTags.add(new com.amazonaws.services.s3.model.Tag("security", "public"));
-		testTags.add(new com.amazonaws.services.s3.model.Tag("foo", "bar"));
-		var TestTagSet = new ObjectTagging(testTags);
+		var testTags = new ArrayList<software.amazon.awssdk.services.s3.model.Tag>();
+		testTags.add(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("public").build());
+		testTags.add(software.amazon.awssdk.services.s3.model.Tag.builder().key("foo").value("bar").build());
+		var testTagSet = Tagging.builder().tagSet(testTags).build();
 
 		var altClient = getAltClient();
-		altClient.setObjectTagging(new SetObjectTaggingRequest(bucketName, publicTag, TestTagSet));
+		altClient.putObjectTagging(p -> p.bucket(bucketName).key(publicTag).tagging(testTagSet));
 
-		var e = assertThrows(AmazonServiceException.class, () -> altClient.setObjectTagging(new SetObjectTaggingRequest(bucketName, privateTag, TestTagSet)));
-		var statusCode = e.getStatusCode();
+		var e = assertThrows(AwsServiceException.class,
+				() -> altClient.putObjectTagging(p -> p.bucket(bucketName).key(privateTag).tagging(testTagSet)));
+		var statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 
-		testTags = new ArrayList<com.amazonaws.services.s3.model.Tag>();
-		testTags.add(new com.amazonaws.services.s3.model.Tag("security", "private"));
-		var TestTagSet2 = new ObjectTagging(testTags);
+		testTags = new ArrayList<software.amazon.awssdk.services.s3.model.Tag>();
+		testTags.add(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("private").build());
+		var testTagSet2 = Tagging.builder().tagSet(testTags).build();
 
-		altClient.setObjectTagging(new SetObjectTaggingRequest(bucketName, publicTag, TestTagSet2));
+		altClient.putObjectTagging(p -> p.bucket(bucketName).key(privateTag).tagging(testTagSet2));
 
-		testTags = new ArrayList<com.amazonaws.services.s3.model.Tag>();
-		testTags.add(new com.amazonaws.services.s3.model.Tag("security", "public"));
-		testTags.add(new com.amazonaws.services.s3.model.Tag("foo", "bar"));
-		var TestTagSet3 = new ObjectTagging(testTags);
+		testTags = new ArrayList<software.amazon.awssdk.services.s3.model.Tag>();
+		testTags.add(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("public").build());
+		testTags.add(software.amazon.awssdk.services.s3.model.Tag.builder().key("foo").value("bar").build());
+		var testTagSet3 = Tagging.builder().tagSet(testTags).build();
 
-		e = assertThrows(AmazonServiceException.class, () -> altClient.setObjectTagging(new SetObjectTaggingRequest(bucketName, publicTag, TestTagSet3)));
-		statusCode = e.getStatusCode();
+		e = assertThrows(AwsServiceException.class,
+				() -> altClient.putObjectTagging(p -> p.bucket(bucketName).key(invalidTag).tagging(testTagSet3)));
+		statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 	}
 
 	@Test
 	@Tag("PathOptions")
-	// [복사하려는 경로명이 'bucketName/public/*'에 해당할 경우에만 모든유저에게 PutObject허용] 조건부 정책설정시 올바르게 동작하는지 확인
-	public void test_bucket_policy_put_obj_copy_source()
-	{
-		var public_foo = "public/foo";
-		var public_bar = "public/bar";
-		var private_foo = "private/foo";
-		var sourceBucketName = createObjects(new ArrayList<>(Arrays.asList(new String[] { public_foo, public_bar, private_foo })));
+	// [복사하려는 경로명이 'bucketName/public/*'에 해당할 경우에만 모든유저에게 PutObject허용] 조건부 정책설정시
+	// 올바르게 동작하는지 확인
+	public void testBucketPolicyPutObjCopySource() {
+		var publicFoo = "public/foo";
+		var publicBar = "public/bar";
+		var privateFoo = "private/foo";
+		var sourceBucketName = createObjects(List.of(publicFoo, publicBar, privateFoo));
 		var client = getClient();
 
 		var sourceResource = makeArnResource(String.format("%s/%s", sourceBucketName, "*"));
 		var policyDocument = makeJsonPolicy("s3:GetObject", sourceResource, null, null);
-		client.setBucketPolicy(sourceBucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(sourceBucketName).policy(policyDocument.toString()));
 
 		var targetBucketName = getNewBucket();
 
@@ -498,40 +474,44 @@ public class Policy extends TestBase
 		tagConditional.add("StringLike", conditional);
 
 		var resource = makeArnResource(String.format("%s/%s", targetBucketName, "*"));
-		policyDocument = makeJsonPolicy("s3:PutObject", resource, null, tagConditional);
-		client.setBucketPolicy(targetBucketName, policyDocument.toString());
+		var policyDocument2 = makeJsonPolicy("s3:PutObject", resource, null, tagConditional);
+		client.putBucketPolicy(p -> p.bucket(targetBucketName).policy(policyDocument2.toString()));
 
 		var altClient = getAltClient();
-		var new_foo = "new_foo";
-		altClient.copyObject(sourceBucketName, public_foo, targetBucketName, new_foo);
+		var newFoo = "newFoo";
+		altClient.copyObject(c -> c.sourceBucket(sourceBucketName).sourceKey(publicFoo)
+				.destinationBucket(targetBucketName).destinationKey(newFoo));
 
-		var response = altClient.getObject(targetBucketName, new_foo);
-		var Body = getBody(response.getObjectContent());
-		assertEquals(public_foo, Body);
+		var response = altClient.getObject(g -> g.bucket(targetBucketName).key(newFoo));
+		var body = getBody(response);
+		assertEquals(publicFoo, body);
 
-		var new_foo2 = "new_foo2";
-		altClient.copyObject(sourceBucketName, public_bar, targetBucketName, new_foo2);
+		var newFoo2 = "newFoo2";
+		altClient.copyObject(c -> c.sourceBucket(sourceBucketName).sourceKey(publicBar)
+				.destinationBucket(targetBucketName).destinationKey(newFoo2));
 
-		response = altClient.getObject(targetBucketName, new_foo2);
-		Body = getBody(response.getObjectContent());
-		assertEquals(public_bar, Body);
+		response = altClient.getObject(g -> g.bucket(targetBucketName).key(newFoo2));
+		body = getBody(response);
+		assertEquals(publicBar, body);
 
-		 assertThrows(AmazonServiceException.class, () -> altClient.copyObject(sourceBucketName, private_foo, targetBucketName, new_foo2));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.copyObject(c -> c.sourceBucket(sourceBucketName).sourceKey(privateFoo)
+						.destinationBucket(targetBucketName).destinationKey(newFoo2)));
 	}
 
 	@Test
 	@Tag("MetadataOptions")
-	// [오브젝트의 메타데이터값이 'x-amz-metadata-directive=COPY'일 경우에만 모든유저에게 PutObject허용] 조건부 정책설정시 올바르게 동작하는지 확인
-	public void test_bucket_policy_put_obj_copy_source_meta()
-	{
-		var public_foo = "public/foo";
-		var public_bar = "public/bar";
-		var sourceBucketName = createObjects(new ArrayList<>(Arrays.asList(new String[] { public_foo, public_bar })));
+	// [오브젝트의 메타데이터값이 'x-amz-metadata-directive=COPY'일 경우에만 모든유저에게 PutObject허용] 조건부
+	// 정책설정시 올바르게 동작하는지 확인
+	public void testBucketPolicyPutObjCopySourceMeta() {
+		var publicFoo = "public/foo";
+		var publicBar = "public/bar";
+		var sourceBucketName = createObjects(List.of(publicFoo, publicBar));
 		var client = getClient();
 
 		var sourceResource = makeArnResource(String.format("%s/%s", sourceBucketName, "*"));
 		var policyDocument = makeJsonPolicy("s3:GetObject", sourceResource, null, null);
-		client.setBucketPolicy(sourceBucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(sourceBucketName).policy(policyDocument.toString()));
 
 		var targetBucketName = getNewBucket();
 
@@ -541,28 +521,35 @@ public class Policy extends TestBase
 		s3Conditional.add("StringEquals", conditional);
 
 		var resource = makeArnResource(String.format("%s/%s", targetBucketName, "*"));
-		policyDocument = makeJsonPolicy("s3:PutObject", resource, null, s3Conditional);
-		client.setBucketPolicy(targetBucketName, policyDocument.toString());
+		var policyDocument2 = makeJsonPolicy("s3:PutObject", resource, null, s3Conditional);
+		client.putBucketPolicy(p -> p.bucket(targetBucketName).policy(policyDocument2.toString()));
 
 		var altClient = getAltClient();
-		var new_foo = "new_foo";
-		altClient.copyObject(new CopyObjectRequest(sourceBucketName, public_foo, targetBucketName, new_foo).withMetadataDirective(MetadataDirective.COPY));
+		var newFoo = "newFoo";
+		altClient.copyObject(c -> c.sourceBucket(sourceBucketName).sourceKey(publicFoo)
+				.destinationBucket(targetBucketName).destinationKey(newFoo)
+				.metadataDirective(MetadataDirective.COPY));
 
-		var response = altClient.getObject(targetBucketName, new_foo);
-		var Body = getBody(response.getObjectContent());
-		assertEquals(public_foo, Body);
+		var response = altClient.getObject(g -> g.bucket(targetBucketName).key(newFoo));
+		var body = getBody(response);
+		assertEquals(publicFoo, body);
 
-		var new_foo2 = "new_foo2";
-		assertThrows(AmazonServiceException.class, () -> altClient.copyObject(sourceBucketName, public_bar, targetBucketName, new_foo2));
+		var newFoo2 = "newFoo2";
+		assertThrows(AwsServiceException.class,
+				() -> altClient.copyObject(c -> c.sourceBucket(sourceBucketName).sourceKey(publicBar)
+						.destinationBucket(targetBucketName).destinationKey(newFoo2)));
 
-		assertThrows(AmazonServiceException.class, () -> altClient.copyObject(new CopyObjectRequest(sourceBucketName, public_bar, targetBucketName, new_foo2).withMetadataDirective(MetadataDirective.REPLACE)));
+		assertThrows(AwsServiceException.class,
+				() -> altClient.copyObject(c -> c.sourceBucket(sourceBucketName).sourceKey(publicBar)
+						.destinationBucket(targetBucketName).destinationKey(newFoo2)
+						.metadataDirective(MetadataDirective.REPLACE)));
 	}
 
 	@Test
 	@Tag("ACLOptions")
-	// [PutObject는 모든유저에게 허용하지만 권한설정에 'public*'이 포함되면 업로드허용하지 않음] 조건부 정책설정시 올바르게 동작하는지 확
-	public void test_bucket_policy_put_obj_acl()
-	{
+	// [PutObject는 모든유저에게 허용하지만 권한설정에 'public*'이 포함되면 업로드허용하지 않음] 조건부 정책설정시 올바르게
+	// 동작하는지 확
+	public void testBucketPolicyPutObjAcl() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
@@ -576,31 +563,31 @@ public class Policy extends TestBase
 		var s2 = makeJsonStatement("s3:PutObject", resource, MainData.PolicyEffectDeny, null, tagConditional);
 		var policyDocument = makeJsonPolicy(s1, s2);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
 		var altClient = getAltClient();
 		var key1 = "private-key";
 
-		altClient.putObject(bucketName, key1, key1);
+		altClient.putObject(p -> p.bucket(bucketName).key(key1), RequestBody.fromString(key1));
 
 		var key2 = "public-key";
-		var headers = new ObjectMetadata();
-		headers.setHeader("x-amz-acl", "public-read");
-		headers.setContentType("text/plain");
-		headers.setContentLength(key2.length());
+		var headers = new HashMap<String, String>();
+		headers.put("x-amz-acl", "public-read");
 
-		var e = assertThrows(AmazonServiceException.class, () -> altClient.putObject(bucketName, key2, createBody(key2), headers));
-		var statusCode = e.getStatusCode();
+		var e = assertThrows(AwsServiceException.class,
+				() -> altClient.putObject(p -> p.bucket(bucketName).key(key2).metadata(headers),
+						RequestBody.fromString(key2)));
+		var statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 	}
 
 	@Test
 	@Tag("GrantOptions")
-	// [오브젝트의 grant-full-control이 메인유저일 경우에만 모든유저에게 PutObject허용] 조건부 정책설정시 올바르게 동작하는지 확인
-	public void test_bucket_policy_put_obj_grant()
-	{
-		var bucketName = getNewBucket();
-		var BucketName2 = getNewBucket();
+	// [오브젝트의 grant-full-control이 메인유저일 경우에만 모든유저에게 PutObject허용] 조건부 정책설정시 올바르게
+	// 동작하는지 확인
+	public void testBucketPolicyPutObjGrant() {
+		var bucketName1 = getNewBucket();
+		var bucketName2 = getNewBucket();
 		var client = getClient();
 
 		var mainUserId = config.mainUser.userId;
@@ -613,47 +600,46 @@ public class Policy extends TestBase
 		var s3Conditional = new JsonObject();
 		s3Conditional.add("StringEquals", conditional);
 
-		var resource = makeArnResource(String.format("%s/%s", bucketName, "*"));
+		var resource = makeArnResource(String.format("%s/%s", bucketName1, "*"));
 		var policyDocument = makeJsonPolicy("s3:PutObject", resource, null, s3Conditional);
 
-		var resource2 = makeArnResource(String.format("%s/%s", BucketName2, "*"));
+		var resource2 = makeArnResource(String.format("%s/%s", bucketName2, "*"));
 		var policyDocument2 = makeJsonPolicy("s3:PutObject", resource2, null, null);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
-		client.setBucketPolicy(BucketName2, policyDocument2.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName1).policy(policyDocument.toString()));
+		client.putBucketPolicy(p -> p.bucket(bucketName2).policy(policyDocument2.toString()));
 
 		var altClient = getAltClient();
-		var Key1 = "key1";
+		var key1 = "key1";
 
-		var headers = new ObjectMetadata();
-		headers.setHeader("x-amz-grant-full-control", ownerId);
-		headers.setContentType("text/plain");
-		headers.setContentLength(Key1.length());
+		var headers = new HashMap<String, String>();
+		headers.put("x-amz-grant-full-control", ownerId);
 
-		altClient.putObject(bucketName, Key1, createBody(Key1), headers);
+		altClient.putObject(p -> p.bucket(bucketName1).key(key1).metadata(headers), RequestBody.fromString(key1));
 
-		var Key2 = "key2";
-		altClient.putObject(BucketName2, Key2, Key2);
+		var key2 = "key2";
+		altClient.putObject(p -> p.bucket(bucketName2).key(key2), RequestBody.fromString(key2));
 
-		var acl1Response = client.getObjectAcl(bucketName, Key1);
+		var acl1Response = client.getObjectAcl(g -> g.bucket(bucketName1).key(key1));
 
-		assertThrows(AmazonServiceException.class, () -> client.getObjectAcl(BucketName2, Key2));
+		assertThrows(AwsServiceException.class, () -> client.getObjectAcl(g -> g.bucket(bucketName1).key(key2)));
 
-		var acl2Response = altClient.getObjectAcl(BucketName2, Key2);
+		var acl2Response = altClient.getObjectAcl(g -> g.bucket(bucketName2).key(key2));
 
-		assertEquals(mainUserId, acl1Response.getGrantsAsList().get(0).getGrantee().getIdentifier());
-		assertEquals(altUserId, acl2Response.getGrantsAsList().get(0).getGrantee().getIdentifier());
+		assertEquals(mainUserId, acl1Response.grants().get(0).grantee().id());
+		assertEquals(altUserId, acl2Response.grants().get(0).grantee().id());
 	}
 
 	@Test
 	@Tag("TagOptions")
-	// [오브젝트의 태그에 'security'키 이름이 존재하며 키값이 public 일때만 모든유저에게 GetObjectACL허용] 조건부 정책설정시 올바르게 동작하는지 확인
-	public void test_bucket_policy_get_obj_acl_existing_tag()
-	{
+	// [오브젝트의 태그에 'security'키 이름이 존재하며 키값이 public 일때만 모든유저에게 GetObjectACL허용] 조건부
+	// 정책설정시 올바르게 동작하는지 확인
+	public void testBucketPolicyGetObjAclExistingTag() {
 		var publicTag = "publicTag";
 		var privateTag = "privateTag";
 		var invalidTag = "invalidTag";
-		var bucketName = createObjects(new ArrayList<>(Arrays.asList(new String[] { publicTag, privateTag, invalidTag })));
+		var bucketName = createObjects(
+				List.of(publicTag, privateTag, invalidTag));
 		var client = getClient();
 
 		var conditional = new JsonObject();
@@ -664,52 +650,47 @@ public class Policy extends TestBase
 		var resource = makeArnResource(String.format("%s/%s", bucketName, "*"));
 		var policyDocument = makeJsonPolicy("s3:GetObjectAcl", resource, null, tagConditional);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
 
+		client.putObjectTagging(p -> p.bucket(bucketName).key(publicTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("public").build(),
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("foo").value("bar").build())));
 
-		var tags = new ArrayList<com.amazonaws.services.s3.model.Tag>();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security", "public"));
-		tags.add(new com.amazonaws.services.s3.model.Tag("foo", "bar"));
-		var inputTagSet = new ObjectTagging(tags);
+		client.putObjectTagging(p -> p.bucket(bucketName).key(privateTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security").value("private").build())));
 
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, publicTag, inputTagSet));
-
-		tags.clear();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security", "private"));
-		inputTagSet.setTagSet(tags);
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, privateTag, inputTagSet));
-
-		tags.clear();
-		tags.add(new com.amazonaws.services.s3.model.Tag("security1", "public"));
-		inputTagSet.setTagSet(tags);
-		client.setObjectTagging(new SetObjectTaggingRequest(bucketName, invalidTag, inputTagSet));
+		client.putObjectTagging(p -> p.bucket(bucketName).key(invalidTag).tagging(t -> t.tagSet(
+				software.amazon.awssdk.services.s3.model.Tag.builder().key("security1").value("public").build())));
 
 		var altClient = getAltClient();
-		var ACLResponse = altClient.getObjectAcl(bucketName, publicTag);
-		assertNotNull(ACLResponse);
+		var aclResponse = altClient.getObjectAcl(g -> g.bucket(bucketName).key(publicTag));
+		assertNotNull(aclResponse);
 
-		var e = assertThrows(AmazonServiceException.class, () -> altClient.getObject(bucketName, publicTag));
-		var statusCode = e.getStatusCode();
+		var e = assertThrows(AwsServiceException.class,
+				() -> altClient.getObject(g -> g.bucket(bucketName).key(publicTag)));
+		var statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 
-		e = assertThrows(AmazonServiceException.class, () -> altClient.getObjectTagging(new GetObjectTaggingRequest(bucketName, privateTag)));
-		statusCode = e.getStatusCode();
+		e = assertThrows(AwsServiceException.class,
+				() -> altClient.getObjectTagging(g -> g.bucket(bucketName).key(privateTag)));
+		statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 
-		e = assertThrows(AmazonServiceException.class, () -> altClient.getObjectTagging(new GetObjectTaggingRequest(bucketName, invalidTag)));
-		statusCode = e.getStatusCode();
+		e = assertThrows(AwsServiceException.class,
+				() -> altClient.getObjectTagging(g -> g.bucket(bucketName).key(invalidTag)));
+		statusCode = e.statusCode();
 		assertEquals(403, statusCode);
 	}
 
 	@Test
 	@Tag("Status")
 	// [모든 사용자가 버킷에 public-read권한을 가지는 정책] 버킷의 정책상태가 올바르게 변경되는지 확인
-	public void test_get_public_policy_acl_bucket_policy_status()
-	{
+	public void testGetPublicPolicyAclBucketPolicyStatus() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		assertThrows(AmazonServiceException.class, () -> client.getBucketPolicyStatus(new GetBucketPolicyStatusRequest().withBucketName(bucketName)));
+		assertThrows(AwsServiceException.class,
+				() -> client.getBucketPolicyStatus(g -> g.bucket(bucketName)));
 
 		var resource1 = MainData.PolicyResourcePrefix + bucketName;
 		var resource2 = MainData.PolicyResourcePrefix + bucketName + "/*";
@@ -723,7 +704,7 @@ public class Policy extends TestBase
 		statement.addProperty(MainData.PolicyEffect, MainData.PolicyEffectAllow);
 
 		var principal = new JsonObject();
-		principal.addProperty( "AWS", "*");
+		principal.addProperty("AWS", "*");
 		statement.add(MainData.PolicyPrincipal, principal);
 
 		statement.addProperty(MainData.PolicyAction, "s3:ListBucket");
@@ -736,20 +717,20 @@ public class Policy extends TestBase
 		statements.add(statement);
 		policyDocument.add(MainData.PolicyStatement, statements);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
-		var response = client.getBucketPolicyStatus(new GetBucketPolicyStatusRequest().withBucketName(bucketName));
-		assertTrue(response.getPolicyStatus().getIsPublic());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
+		var response = client.getBucketPolicyStatus(g -> g.bucket(bucketName));
+		assertTrue(response.policyStatus().isPublic());
 	}
 
 	@Test
 	@Tag("Status")
 	// [특정 ip로 접근했을때만 public-read권한을 가지는 정책] 버킷의 정책상태가 올바르게 변경되는지 확인
-	public void test_get_nonpublic_policy_acl_bucket_policy_status()
-	{
+	public void testGetNonpublicPolicyAclBucketPolicyStatus() {
 		var bucketName = getNewBucket();
 		var client = getClient();
 
-		assertThrows(AmazonServiceException.class, () -> client.getBucketPolicyStatus(new GetBucketPolicyStatusRequest().withBucketName(bucketName)));
+		assertThrows(AwsServiceException.class,
+				() -> client.getBucketPolicyStatus(g -> g.bucket(bucketName)));
 
 		var resource1 = MainData.PolicyResourcePrefix + bucketName;
 		var resource2 = MainData.PolicyResourcePrefix + bucketName + "/*";
@@ -763,7 +744,7 @@ public class Policy extends TestBase
 		statement.addProperty(MainData.PolicyEffect, MainData.PolicyEffectAllow);
 
 		var principal = new JsonObject();
-		principal.addProperty( "AWS", "*");
+		principal.addProperty("AWS", "*");
 		statement.add(MainData.PolicyPrincipal, principal);
 
 		statement.addProperty(MainData.PolicyAction, "s3:ListBucket");
@@ -782,8 +763,8 @@ public class Policy extends TestBase
 		statements.add(statement);
 		policyDocument.add(MainData.PolicyStatement, statements);
 
-		client.setBucketPolicy(bucketName, policyDocument.toString());
-		var response = client.getBucketPolicyStatus(new GetBucketPolicyStatusRequest().withBucketName(bucketName));
-		assertFalse(response.getPolicyStatus().getIsPublic());
+		client.putBucketPolicy(p -> p.bucket(bucketName).policy(policyDocument.toString()));
+		var response = client.getBucketPolicyStatus(g -> g.bucket(bucketName));
+		assertFalse(response.policyStatus().isPublic());
 	}
 }
